table export done

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-csv": "^2.0.3",
     "react-data-grid": "^7.0.0-canary.14",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
