--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-csv": "^2.0.3",
     "react-data-grid": "^7.0.0-canary.14",
     "react-dom": "^16.13.1",
